--- a/package.json
+++ b/package.json
@@ -36,36 +36,36 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "rxjs": "5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.1",
+    "rxjs": "^5.1.0",
+    "@angular/core": "^2.4.0",
     "@ngrx/store": "^2.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
     "@ngrx/core": "^1.0.0",
     "conventional-changelog-cli": "^1.1.1",
-    "core-js": "^2.2.2",
+    "core-js": "^2.4.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.8",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript-preprocessor": "0.0.21",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^1.8.0",
     "npm-run-all": "^1.7.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.1.0",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.1",
     "tslint": "^3.6.0",
-    "typescript": "^1.8.9",
+    "typescript": "2.1.1",
     "typings": "^0.7.12",
     "webpack": "^1.12.14",
     "zone.js": "^0.6.8"
