chore(dependencies): upgrade dependencies
BREAKING CHANGE:
The peer dependencies have been upgraded to be:
* "rxjs": "^5.4.2",
* "@angular/core": "^4.3.0",
* "@ngrx/store": "^2.2.3"

close #2, close #3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "version": "1.8.0",
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./release/esm",
@@ -9,12 +8,16 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "lib": ["es2017", "dom"],
+    "types": [
+      "core-js",
+      "node"
+    ]
   },
   "exclude": [
     "node_modules",
     "spec",
-    "typings",
     "release"
   ]
 }
