--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ngrx/notify",
-  "version": "1.0.0",
-  "description": "Web Notifications Powered by RxJS for Angular 2",
+  "version": "2.0.0",
+  "description": "Web Notifications Powered by RxJS for Angular",
   "main": "index.js",
   "jsnext:main": "esm/index.js",
   "repository": {
@@ -12,18 +12,16 @@
     "lint": "npm-run-all lint:*",
     "lint:lib": "tslint lib/**.ts",
     "lint:spec": "tslint spec/**.ts",
-    "typings": "typings install",
     "clean": "npm-run-all clean:*",
     "clean:release": "rm -rf ./release",
-    "clean:typings": "rm -rf ./typings",
-    "prebuild": "npm-run-all clean typings karma",
+    "prebuild": "npm-run-all clean karma",
     "build": "npm-run-all build:cjs build:es6",
     "build:cjs": "tsc --p tsconfig.es5.json --diagnostics --pretty",
     "build:es6": "tsc -m es2015   --outDir ./release/esm --target ES6 -d --diagnostics --pretty",
     "prepare": "npm-run-all prepare:*",
     "prepare:es6": "cp -R ./release/esm ./release/npm",
     "prepare:package": "cp ./{package.json,README.md,LICENSE} ./release/npm",
-    "test": "npm-run-all clean typings karma",
+    "test": "npm-run-all clean karma",
     "karma": "karma start --single-run",
     "karma:watch": "karma start",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -36,38 +34,46 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "rxjs": "5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.1",
-    "@ngrx/store": "^2.0.0"
+    "rxjs": "^5.4.2",
+    "@angular/core": "^4.3.0",
+    "@ngrx/store": "^2.2.3"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@ngrx/core": "^1.0.0",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@ngrx/store": "^2.2.3",
+    "@types/core-js": "^0.9.42",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.14",
     "conventional-changelog-cli": "^1.1.1",
     "core-js": "^2.2.2",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "fs.realpath": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.8",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-typescript-preprocessor": "0.0.21",
-    "karma-webpack": "^1.7.0",
-    "npm-run-all": "^1.7.0",
+    "karma-typescript-preprocessor": "0.3.1",
+    "karma-webpack": "^2.0.4",
+    "npm-run-all": "^4.0.2",
+    "pseudomap": "^1.0.2",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "source-map-loader": "^0.1.5",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.6.0",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.12",
-    "webpack": "^1.12.14",
-    "zone.js": "^0.6.8"
+    "rxjs": "5.4.2",
+    "source-map-loader": "^0.2.1",
+    "ts-helpers": "^1.1.2",
+    "ts-loader": "^2.3.0",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1",
+    "webpack": "^3.3.0",
+    "yallist": "^3.0.2",
+    "zone.js": "0.8.12"
   }
 }
