--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -7,10 +7,15 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
-    "declaration": false
+    "declaration": false,
+    "lib": ["es2017", "dom"],
+    "types": [
+      "core-js",
+      "jasmine",
+      "node"
+    ]
   },
   "files": [
-    "../typings/main.d.ts",
     "notification-permission.spec.ts",
     "notify.spec.ts",
     "index.spec.ts"
