--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -1,5 +1,4 @@
 {
-  "version": "1.8.0",
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./release/npm",
@@ -10,13 +9,16 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "lib": ["es2017", "dom"],
+    "types": [
+      "core-js",
+      "node"
+    ]
   },
   "exclude": [
     "node_modules",
     "spec",
-    "release",
-    "typings/browser",
-    "typings/browser.d.ts"
+    "release"
   ]
 }
