--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngrx/notify",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Web Notifications Powered by RxJS for Angular",
   "main": "index.js",
   "jsnext:main": "esm/index.js",
@@ -14,7 +14,7 @@
     "lint:spec": "tslint spec/**.ts",
     "clean": "npm-run-all clean:*",
     "clean:release": "rm -rf ./release",
-    "prebuild": "npm-run-all clean karma",
+    "prebuild": "npm-run-all clean",
     "build": "npm-run-all build:cjs build:es6",
     "build:cjs": "tsc --p tsconfig.es5.json --diagnostics --pretty",
     "build:es6": "tsc -m es2015   --outDir ./release/esm --target ES6 -d --diagnostics --pretty",
@@ -25,6 +25,7 @@
     "karma": "karma start --single-run",
     "karma:watch": "karma start",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "postinstall": "npm run build",
     "postbuild": "npm run prepare",
     "preversion": "npm run test",
     "version": "npm run changelog && git add CHANGELOG.md"
@@ -34,17 +35,17 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "rxjs": "^5.4.2",
-    "@angular/core": "^4.3.0",
-    "@ngrx/store": "^2.2.3"
+    "rxjs": "^5.5.6",
+    "@angular/core": "^5.2.0",
+    "@ngrx/store": "^4.1.1"
   },
   "devDependencies": {
-    "@angular/common": "^4.3.0",
-    "@angular/compiler": "^4.3.0",
-    "@angular/core": "^4.3.0",
-    "@angular/platform-browser": "^4.3.0",
-    "@angular/platform-browser-dynamic": "^4.3.0",
-    "@ngrx/store": "^2.2.3",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@ngrx/store": "^4.1.1",
     "@types/core-js": "^0.9.42",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.14",
@@ -66,7 +67,7 @@
     "npm-run-all": "^4.0.2",
     "pseudomap": "^1.0.2",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.4.2",
+    "rxjs": "5.5.6",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^2.3.0",
